rebranding of legacy we moved pages tfs: 23592, 23600.
Updates:

[Edward] Moved all leave behind files to a common folder. Rename references for http://software.dell.com to https://software.dell.com
[Naveen] Removed external links to css/js

Change-Id: I8487d664e9a8a8555f2097f18b1c337a1219213a

--- a/pages/leave-behind/appassure.com.html
+++ b/pages/leave-behind/appassure.com.html
@@ -10,43 +10,10 @@
 	<meta name="keywords" content="">
 	<meta name="description" content="">
 	<meta content="AppAssure" property="og:title">
-	<meta content="http://software.dell.com/images/logos/dell.jpg" property="og:image">
-	<meta content="http://software.dell.com/appassure-has-moved/" property="og:url">
-	<meta content="" property="og:description">
-	<meta name="BU" content="">
-	<meta name="Solution" content="">
-	<meta name="Product" content="">
-	<meta name="Technology" content="">
-	<meta name="Industry" content="">
-	<meta name="Platform" content="">
-	<meta name="Brand" content="">
-	<meta name="PageTemplate" content="Crawled Landing Page">
-	<meta name="Section" content="appassure-has-moved">
-	<meta name="Subsection" content="">
+	<meta content="https://software.dell.com/images/logos/dell.jpg" property="og:image">
+	<meta content="https://software.dell.com/appassure-has-moved/" property="og:url">
 	<script type="text/javascript" src="//code.jquery.com/jquery-1.9.1.min.js"></script>
 	<link rel="alternate" hreflang="en" href="http://www.appassure.com/" />
-	<link rel="canonical" href="http://www.appassure.com/" /><!-- V1LayoutHeadTagCommon (DSG US) -->
-	<link rel="stylesheet" type="text/css" href="http://software.dell.com/Static/Styles/collective.min.css?38">
-	<link rel="stylesheet" type="text/css" href="http://software.dell.com/Static/Styles/widgets-dsg.css">
-	<link rel="stylesheet" type="text/css" href="http://software.dell.com/Static/Styles/print.min.css" media="print">
-	<script type="text/javascript" src="http://software.dell.com/Static/Scripts/jquery.plugins.min.js"></script>
-	<!--[if lt IE 9]>
-	<script type="text/javascript" src="http://software.dell.com/Static/Scripts/html5shiv.js"></script>
-	<![endif]--><!--[if IE 7]>
-	<link rel="stylesheet" type="text/css" href="http://software.dell.com/Static/Styles/ie7.min.css">
-	<script type="text/javascript" src="http://software.dell.com/Static/Scripts/ie.min.js"></script>
-	<![endif]--><!--[if IE 8]>
-	<link rel="stylesheet" type="text/css" href="http://software.dell.com/Static/Styles/ie8.min.css">
-	<script type="text/javascript" src="http://software.dell.com/Static/Scripts/ie.min.js"></script>
-	<![endif]--><!--[if IE 9]>
-	<link rel="stylesheet" type="text/css" href="http://software.dell.com/Static/Styles/ie9.min.css"><![endif]-->
-	<link href="http://software.dell.com/Static/Styles/bootstrap-dsg.min.css?v1" type="text/css" rel="stylesheet">
-	<script src="http://software.dell.com/static/library/jQueryUI/jquery-ui-1.11.4.min.js"></script>
-	<script src="http://software.dell.com/static/Library/bootstrap-3.3.4.min.js"></script>
-	<script src="http://software.dell.com/static/Library/modernizr.min.js"></script>
-	<!--[if IE]>
-	<link rel="stylesheet" href="http://software.dell.com/Static/Styles/bootstrap-dsg-ie.css"><![endif]-->
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries --><!--[if lt IE 9]>
 	<script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 	<script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
@@ -73,6 +40,22 @@
 	<style type="text/css">
 		body {
 			background-color: rgb(238, 238, 238);
+			color: #333;
+			font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+			font-size: 13px;
+			line-height: 16px;
+		}
+
+		html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+			border: 0 none;
+			font: inherit;
+			margin: 0;
+			padding: 0;
+			vertical-align: baseline;
+		}
+
+		.wrapper {
+			width: 967px;
 		}
 
 		#id {
@@ -82,6 +65,8 @@
 		#main-content {
 			position: relative;
 			padding-bottom: 10px;
+			background-color: #eee;
+			line-height: 20px;
 		}
 
 		#copyright-container {
@@ -124,7 +109,6 @@
 		.ui-menu li::before {
 
 			width: 100%;
-			height: 1px;
 			display: block;
 			content: "";
 			margin-bottom: 5px;
@@ -223,7 +207,7 @@
 
 		.ui-widget-header {
 			border: 1px solid #aaaaaa;
-			background: #eeeeee url("http://software.dell.com/landing//images/ui-bg_flat_100_eeeeee_40x100.png") 50% 50% repeat-x;
+			background: #eeeeee url("https://software.dell.com/landing//images/ui-bg_flat_100_eeeeee_40x100.png") 50% 50% repeat-x;
 			color: #FFFFFF;
 			font-weight: bold;
 		}
@@ -238,7 +222,7 @@
 		.ui-widget-content .ui-state-default,
 		.ui-widget-header .ui-state-default {
 			border: 1px solid #aaaaaa;
-			background: #6ea204 url("http://software.dell.com/landing//images/ui-bg_flat_100_6ea204_40x100.png") 50% 50% repeat-x;
+			background: #6ea204 url("https://software.dell.com/landing//images/ui-bg_flat_100_6ea204_40x100.png") 50% 50% repeat-x;
 			font-weight: bold;
 			color: #ffffff;
 		}
@@ -381,20 +365,7 @@
 		}
 
 		/* Overlays */
-		.ui-widget-overlay {
-			background: #aaaaaa url("http://software.dell.com/landing//images/ui-bg_flat_0_aaaaaa_40x100.png") 50% 50% repeat-x;
-			opacity: .3;
-			filter: Alpha(Opacity=30);
-		}
 
-		.ui-widget-shadow {
-			margin: -8px 0 0 -8px;
-			padding: 8px;
-			background: #aaaaaa url("http://software.dell.com/landing//images/ui-bg_flat_0_aaaaaa_40x100.png") 50% 50% repeat-x;
-			opacity: .3;
-			filter: Alpha(Opacity=30);
-			border-radius: 8px;
-		}
 
 		.bg {
 			position: absolute;
@@ -434,57 +405,6 @@
 			z-index: 1095;
 		}
 
-		.bg_lock {
-			top: 15%;
-			width: 116px;
-			height: 191px;
-			right: 0px;
-			background-image: url("http://software.dell.com/landing/images/bg_lock.png");
-			background-attachment: scroll;
-			backgroun-repeat: no-repeat;
-			background-postion-x: 0%;
-			background-position-y: 0%;
-			background-size: auto;
-			background-origin: padding-box;
-			background-clip: border-box;
-			background-color: transparent;
-			z-index: 1098;
-		}
-
-		.bg_cloud {
-			bottom: 0px;
-			width: 315px;
-			height: 135px;
-			right: 11%;
-			background-image: url("http://software.dell.com/landing/images/bg_cloud.png");
-			background-attachment: scroll;
-			backgroun-repeat: no-repeat;
-			background-postion-x: 0%;
-			background-position-y: 0%;
-			background-size: auto;
-			background-origin: padding-box;
-			background-clip: border-box;
-			background-color: transparent;
-			z-index: 1097;
-		}
-
-		.bg_scheme {
-			bottom: 0px;
-			width: 140px;
-			height: 86px;
-			right: 53%;
-			background-image: url("http://software.dell.com/landing/images/bg_scheme.png");
-			background-attachment: scroll;
-			backgroun-repeat: no-repeat;
-			background-postion-x: 0%;
-			background-position-y: 0%;
-			background-size: auto;
-			background-origin: padding-box;
-			background-clip: border-box;
-			background-color: transparent;
-			z-index: 1096;
-		}
-
 		#footer {
 			position: relative;
 			box-shadow: none;
@@ -499,8 +419,7 @@
 		}
 
 		#footer p {
-			padding-left: 0px;
-			margin-left: -82px;
+			margin-left: 540px;
 		}
 
 		a, a:visited {
@@ -517,16 +436,25 @@
 			font-size: 15px;
 		}
 
+		#body-container ul {
+			margin: 0 0 10px 17px;
+		}
+
 		#body-container ul li {
 			font-size: 15px;
+			line-height: 20px;
+			list-style: outside none disc;
 		}
 
 		.round-corners {
 			padding: 150px 110px 150px 0px;
 			border: 0px currentColor;
 			border-radius: 0px;
-			border-bottom-left-radius: 0px;
 			background-image: url('/images/shared/bg-legacy.jpg');
+			position: relative;
+			overflow: hidden;
+			background-color: #fff;
+			left: 325px;
 		}
 
 		#body-container {
@@ -535,77 +463,82 @@
 			margin-top: 15px;
 			float: right;
 			margin-right: -65px;
+			display: inline-block;
+			font-size: 13px;
+			vertical-align: top;
+			width: 925px;
+		}
+
+		article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+			display: block;
 		}
 	</style>
 </head>
 <body class="one">
 <div id="wrapper">
 	<div id="main-content">
-		<div id="main-content">
-			<div class="wrapper" style="margin-top: 100px;">
-				<div class="round-corners">
-					<div class="bg_quest bg"></div>
-					<div class="menu">
-						<ul aria-activedescendant="ui-id-6" class="ui-menu ui-widget ui-widget-content ui-corner-all"
-						    id="menu" role="menu" tabindex="0">
-							<li class="ui-menu-item" role="presentation">
-								<a aria-haspopup="true" class="ui-corner-all" href="https://quest.com/products/rapid-recovery/"
-								   id="ui-id-1" role="menuitem" tabindex="-1">Products</a>
-							</li>
-							<li class="ui-menu-item" role="presentation">
-								<a class="ui-corner-all" href="http://quest.com/solutions/data-protection/"
-								   id="ui-id-2" role="menuitem" tabindex="-1">Solutions</a>
-							</li>
-							<li class="ui-menu-item" role="presentation">
-								<a class="ui-corner-all" href="http://quest.com/partners/" id="ui-id-3" role="menuitem" tabindex="-1">Partners</a>
-							</li>
-							<li class="ui-menu-item" role="presentation">
-								<a class="ui-corner-all" href="https://support.quest.com/rapid-recovery/6.0.2" id="ui-id-4"
-								   role="menuitem" tabindex="-1">Support</a>
-							</li>
-							<li class="ui-menu-item" role="presentation">
-								<a class="ui-corner-all" href="http://quest.com/acquisitions/appassure.aspx" id="ui-id-5"
-								   role="menuitem" tabindex="-1">About
-									AppAssure</a></li>
-							<li class="ui-menu-item" role="presentation">
-								<a class="ui-corner-all" href="http://quest.com/company/contact-us.aspx" id="ui-id-6" role="menuitem"
-								   tabindex="-1">Contact</a>
-							</li>
-						</ul>
-						<script type="text/javascript">
-							$("#menu").menu();
-						</script>
-					</div>
-					<div id="body-container">
-						<h2>AppAssure is now Rapid Recovery!</h2>
-						<article>
-							<p>There's a new release of AppAssure backup, replication and recovery software - renamed Data Protection
-								| Rapid Recovery, with expanded capabilities. With Rapid Recovery, you can:</p>
-							<ul>
-								<li>Ensure zero impact on your users by presenting them with the data they request instantly,
-									during restores, as if the outage never happened
-								</li>
-								<li>Assure system, application and data availability everywhere: physical, virtual and cloud</li>
-								<li>Protect growing virtual environments automatically</li>
-								<li>Connect to all the leading public clouds simply and easily</li>
-								<li>Lower costs – all capabilities included in one solution</li>
-							</ul>
-							<p><strong>And, it’s a free and easy upgrade for existing AppAssure 5.4.3 license holders!</strong></p>
-
-							<p><a href="http://software.dell.com/products/rapid-recovery/" style="text-decoration: underline;">Learn
-								more</a> – download a Rapid Recovery
-								<a href="https://software.dell.com/register/94236/" style="text-decoration: underline;">trial today</a>.
-							</p>
-						</article>
-					</div>
+		<div class="wrapper" style="margin-top: 100px;">
+			<div class="round-corners">
+				<div class="bg_quest bg"></div>
+				<div class="menu">
+					<ul aria-activedescendant="ui-id-6" class="ui-menu ui-widget ui-widget-content ui-corner-all"
+					    id="menu" role="menu" tabindex="0">
+						<li class="ui-menu-item" role="presentation">
+							<a aria-haspopup="true" class="ui-corner-all" href="https://quest.com/products/rapid-recovery/"
+							   id="ui-id-1" role="menuitem" tabindex="-1">Products</a>
+						</li>
+						<li class="ui-menu-item" role="presentation">
+							<a class="ui-corner-all" href="http://quest.com/solutions/data-protection/"
+							   id="ui-id-2" role="menuitem" tabindex="-1">Solutions</a>
+						</li>
+						<li class="ui-menu-item" role="presentation">
+							<a class="ui-corner-all" href="http://quest.com/partners/" id="ui-id-3" role="menuitem" tabindex="-1">Partners</a>
+						</li>
+						<li class="ui-menu-item" role="presentation">
+							<a class="ui-corner-all" href="https://support.quest.com/rapid-recovery/6.0.2" id="ui-id-4"
+							   role="menuitem" tabindex="-1">Support</a>
+						</li>
+						<li class="ui-menu-item" role="presentation">
+							<a class="ui-corner-all" href="http://quest.com/acquisitions/appassure.aspx" id="ui-id-5"
+							   role="menuitem" tabindex="-1">About
+								AppAssure</a></li>
+						<li class="ui-menu-item" role="presentation">
+							<a class="ui-corner-all" href="http://quest.com/company/contact-us.aspx" id="ui-id-6" role="menuitem"
+							   tabindex="-1">Contact</a>
+						</li>
+					</ul>
+					<script type="text/javascript">
+						$("#menu").menu();
+					</script>
 				</div>
-				<div class="round-corners" id="footer">
-					<p>&copy;2016 Quest Software Inc. ALL RIGHTS RESERVED. | <a href="http://quest.com/legal/">Terms
-						of Use</a> | <a href="http://quest.com/legal/privacy.aspx">Privacy</a>
-					</p></div>
+				<div id="body-container">
+					<h2>AppAssure is now Rapid Recovery!</h2>
+					<article>
+						<p>There's a new release of AppAssure backup, replication and recovery software - renamed Data Protection
+							| Rapid Recovery, with expanded capabilities. With Rapid Recovery, you can:</p>
+						<ul>
+							<li>Ensure zero impact on your users by presenting them with the data they request instantly,
+								during restores, as if the outage never happened
+							</li>
+							<li>Assure system, application and data availability everywhere: physical, virtual and cloud</li>
+							<li>Protect growing virtual environments automatically</li>
+							<li>Connect to all the leading public clouds simply and easily</li>
+							<li>Lower costs – all capabilities included in one solution</li>
+						</ul>
+						<p><strong>And, it’s a free and easy upgrade for existing AppAssure 5.4.3 license holders!</strong></p>
+						<p><a href="https://software.dell.com/products/rapid-recovery/" style="text-decoration: underline;">Learn
+							more</a> – download a Rapid Recovery
+							<a href="https://software.dell.com/register/94236/" style="text-decoration: underline;">trial today</a>.
+						</p>
+					</article>
+				</div>
 			</div>
+			<div id="footer">
+				<p>&copy;2016 Quest Software Inc. ALL RIGHTS RESERVED. | <a href="http://quest.com/legal/">Terms
+					of Use</a> | <a href="http://quest.com/legal/privacy.aspx">Privacy</a>
+				</p></div>
 		</div>
-			</div>
-		</div>
+	</div>
+</div>
 </body>
 </html>
