--- a/pages/leave-behind/remote-scan.com.html
+++ b/pages/leave-behind/remote-scan.com.html
@@ -1,15 +1,48 @@
-<!DOCTYPE HTML>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en-US">
+<!doctype html><!--[if IE 7]>
+<html class="ie ie7" prefix="og: http://ogp.me/ns#"><![endif]--><!--[if IE 8]>
+<html class="ie ie8" prefix="og: http://ogp.me/ns#"><![endif]--><!--[if IE 9]>
+<html class="ie ie9" prefix="og: http://ogp.me/ns#"><![endif]--><!--[if !IE]> -->
+<html prefix="og: http://ogp.me/ns#"><!-- <![endif]-->
 <head>
-	<title>Remote-Scan.com is Now Software.Dell.com</title>
-	<link rel="canonical" href="http://software.dell.com/remotescan/">
-	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-	<script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
-	<link rel="stylesheet" type="text/css" href="style/global.min.css">
-	<style type="text/css">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta charset="utf-8">
+	<title>Remotescan has moved to Quest.com</title><!--Meta Tags-->
+	<meta name="keywords" content="">
+	<meta name="description" content="KACE.com has moved to Quest.com">
+	<script type="text/javascript" src="//code.jquery.com/jquery-1.9.1.min.js"></script>
+	<link rel="alternate" hreflang="en" href="http://www.appassure.com/"/>
+	<script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+	<script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<![endif]-->
+	<script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+	<script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
 
+	<!-- BEGIN GOOGLE ANALYTICS CODE -->
+	<script type="text/javascript">
+		_uacct = "UA-1247950-1";
+		urchinTracker();
+	</script>
+	<!-- END GOOGLE ANALYTICS CODE -->
+
+	<style type="text/css">
 		body {
 			background-color: rgb(238, 238, 238);
+			color: #333;
+			font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+			font-size: 13px;
+			line-height: 16px;
+		}
+
+		html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+			border: 0 none;
+			font: inherit;
+			margin: 0;
+			padding: 0;
+			vertical-align: baseline;
+		}
+
+		.wrapper {
+			width: 967px;
 		}
 
 		#id {
@@ -19,6 +52,8 @@
 		#main-content {
 			position: relative;
 			padding-bottom: 10px;
+			background-color: #eee;
+			line-height: 20px;
 		}
 
 		#copyright-container {
@@ -28,6 +63,7 @@
 		.menu {
 			float: left;
 			top: 5%;
+			width: 200px;
 		}
 
 		/* Overlays */
@@ -49,7 +85,6 @@
 		}
 
 		.ui-menu .ui-menu {
-			margin-top: 193px;
 			position: absolute;
 		}
 
@@ -58,9 +93,8 @@
 		}
 
 		.ui-menu li::before {
-			background: rgb(238, 238, 238);
+
 			width: 100%;
-			height: 1px;
 			display: block;
 			content: "";
 			margin-bottom: 5px;
@@ -84,9 +118,10 @@
 			text-decoration: none;
 			display: block;
 			padding: 2px .4em;
-			line-height: 1.5;
+			line-height: 2;
 			min-height: 0; /* support: IE7 */
 			font-weight: bold;
+			padding-left: 40px;
 		}
 
 		.ui-menu .ui-menu-item a.ui-state-focus,
@@ -131,8 +166,9 @@
 		/* Component containers
 		----------------------------------*/
 		.ui-widget {
-			font-family: Museo, "Trebuchet MS", "Helvetica CY", sans-serif;
-			font-size: 13px;
+			font-family: 'Trebuchet MS';
+			font-size: 15px;
+			font-weight: normal;
 		}
 
 		.ui-widget .ui-widget {
@@ -148,20 +184,16 @@
 		}
 
 		.ui-widget-content {
-			border: 1px solid #aaaaaa;
-			/*background: #6ea204 url("../landing//images/ui-bg_flat_100_6ea204_40x100.png") 50% 50% repeat-x;*/
-			background: #6ea204;
-			color: #ffffff;
+
 		}
 
 		.ui-widget-content a {
-			color: #ffffff;
+			color: #000;
 		}
 
 		.ui-widget-header {
 			border: 1px solid #aaaaaa;
-			/*background: #eeeeee url("../landing//images/ui-bg_flat_100_eeeeee_40x100.png") 50% 50% repeat-x;*/
-			background: #eeeeee;
+			background: #eeeeee url("https://software.dell.com/landing//images/ui-bg_flat_100_eeeeee_40x100.png") 50% 50% repeat-x;
 			color: #FFFFFF;
 			font-weight: bold;
 		}
@@ -176,8 +208,7 @@
 		.ui-widget-content .ui-state-default,
 		.ui-widget-header .ui-state-default {
 			border: 1px solid #aaaaaa;
-			/*background: #6ea204 url("../landing//images/ui-bg_flat_100_6ea204_40x100.png") 50% 50% repeat-x;*/
-			background: #6ea204;
+			background: #6ea204 url("https://software.dell.com/landing//images/ui-bg_flat_100_6ea204_40x100.png") 50% 50% repeat-x;
 			font-weight: bold;
 			color: #ffffff;
 		}
@@ -195,11 +226,9 @@
 		.ui-state-focus,
 		.ui-widget-content .ui-state-focus,
 		.ui-widget-header .ui-state-focus {
-			border: 1px solid #999999;
-			/*background: #f2af00 url("../landing//images/ui-bg_flat_100_f2af00_40x100.png") 50% 50% repeat-x;*/
-			background: #f2af00;
+			background-color: #fb4f14;
 			font-weight: bold;
-			color: #b7295a;
+			color: #FFFFFF;
 		}
 
 		.ui-state-hover a,
@@ -210,18 +239,17 @@
 		.ui-state-focus a:hover,
 		.ui-state-focus a:link,
 		.ui-state-focus a:visited {
-			color: #b7295a;
+			color: #FFFFFF;
 			text-decoration: none;
 		}
 
 		.ui-state-active,
 		.ui-widget-content .ui-state-active,
 		.ui-widget-header .ui-state-active {
-			border: 1px solid #aaaaaa;
-			/*background: #f2af00 url("../landing//images/ui-bg_flat_100_f2af00_40x100.png") 50% 50% repeat-x;*/
-			background: #f2af00;
+
+			background: #fb4f14;
 			font-weight: bold;
-			color: #b7295a;
+			color: #FFFFFF;
 		}
 
 		.ui-state-active a,
@@ -237,8 +265,7 @@
 		.ui-widget-content .ui-state-highlight,
 		.ui-widget-header .ui-state-highlight {
 			border: 1px solid #aaaaaa;
-			/*background: #f2af00 url("../landing//images/ui-bg_flat_100_f2af00_40x100.png") 50% 50% repeat-x;*/
-			background: #f2af00;
+			background: #fb4f14;
 			color: #444444;
 		}
 
@@ -251,10 +278,7 @@
 		.ui-state-error,
 		.ui-widget-content .ui-state-error,
 		.ui-widget-header .ui-state-error {
-			border: 1px solid #cd0a0a;
-			/*background: #fef1ec url("../landing//images/ui-bg_flat_95_fef1ec_40x100.png") 50% 50% repeat-x;*/
-			background: #fef1ec;
-			color: #cd0a0a;
+
 		}
 
 		.ui-state-error a,
@@ -297,53 +321,37 @@
 
 		/* Misc visuals
 		----------------------------------*/
-
 		/* Corner radius */
 		.ui-corner-all,
 		.ui-corner-top,
 		.ui-corner-left,
 		.ui-corner-tl {
-			border-top-left-radius: 5px;
+			border-top-left-radius: 0px;
 		}
 
 		.ui-corner-all,
 		.ui-corner-top,
 		.ui-corner-right,
 		.ui-corner-tr {
-			border-top-right-radius: 5px;
+			border-top-right-radius: 0px;
 		}
 
 		.ui-corner-all,
 		.ui-corner-bottom,
 		.ui-corner-left,
 		.ui-corner-bl {
-			border-bottom-left-radius: 5px;
+			border-bottom-left-radius: 0px;
 		}
 
 		.ui-corner-all,
 		.ui-corner-bottom,
 		.ui-corner-right,
 		.ui-corner-br {
-			border-bottom-right-radius: 5px;
+			border-bottom-right-radius: 0px;
 		}
 
 		/* Overlays */
-		.ui-widget-overlay {
-			/*background: #aaaaaa url("../landing//images/ui-bg_flat_0_aaaaaa_40x100.png") 50% 50% repeat-x;*/
-			background: #aaaaaa;
-			opacity: .3;
-			filter: Alpha(Opacity=30);
-		}
 
-		.ui-widget-shadow {
-			margin: -8px 0 0 -8px;
-			padding: 8px;
-			/*background: #aaaaaa url("../landing//images/ui-bg_flat_0_aaaaaa_40x100.png") 50% 50% repeat-x;*/
-			background: #aaaaaa;
-			opacity: .3;
-			filter: Alpha(Opacity=30);
-			border-radius: 8px;
-		}
 
 		.bg {
 			position: absolute;
@@ -366,12 +374,12 @@
 			z-index: 1099;
 		}
 
-		.bg_wifi {
-			top: 0%;
+		.bg_quest {
+			top: 80px;
 			width: 147px;
-			height: 106px;
-			right: 20%;
-			background-image: url("https://software.dell.com/images/common/migrating-page/bg_wifi.png");
+			height: 42px;
+			right: 81%;
+			background-image: url("http://www-quest-com/images/quest-logo/orange-156x42.png");
 			background-attachment: scroll;
 			backgroun-repeat: no-repeat;
 			background-postion-x: 0%;
@@ -383,114 +391,125 @@
 			z-index: 1095;
 		}
 
-		.bg_lock {
-			top: 15%;
-			width: 116px;
-			height: 191px;
-			right: 0px;
-			background-image: url("https://software.dell.com/images/common/migrating-page/bg_lock.png");
-			background-attachment: scroll;
-			backgroun-repeat: no-repeat;
-			background-postion-x: 0%;
-			background-position-y: 0%;
-			background-size: auto;
-			background-origin: padding-box;
-			background-clip: border-box;
-			background-color: transparent;
-			z-index: 1098;
-		}
-
-		.bg_cloud {
-			bottom: 0px;
-			width: 315px;
-			height: 135px;
-			right: 11%;
-			background-image: url("https://software.dell.com/images/common/migrating-page/bg_cloud.png");
-			background-attachment: scroll;
-			backgroun-repeat: no-repeat;
-			background-postion-x: 0%;
-			background-position-y: 0%;
-			background-size: auto;
-			background-origin: padding-box;
-			background-clip: border-box;
-			background-color: transparent;
-			z-index: 1097;
-		}
-
-		.bg_scheme {
-			bottom: 0px;
-			width: 140px;
-			height: 86px;
-			right: 53%;
-			background-image: url("https://software.dell.com/images/common/migrating-page/bg_scheme.png");
-			background-attachment: scroll;
-			backgroun-repeat: no-repeat;
-			background-postion-x: 0%;
-			background-position-y: 0%;
-			background-size: auto;
-			background-origin: padding-box;
-			background-clip: border-box;
-			background-color: transparent;
-			z-index: 1096;
-		}
-
 		#footer {
 			position: relative;
-			bottom: 1px;
-			height: 20px;
+			box-shadow: none;
+			font-size: 12px;
 			padding: 12px;
-			color: rgb(68, 68, 68);
+			border: 0 none;
+			border-radius: 0;
 			text-align: center;
-			border: 0px;
-			border-top-left-radius: 0px;
-			border-top-right-radius: 0px;
-			background-color: rgb(210, 210, 210);
+			background-color: #eee;
+			background-image: none;
 			z-index: 1199;
+		}
+
+		#footer p {
+			margin-left: 540px;
+		}
+
+		a, a:visited {
+			color: #003769;
+		}
+
+		h2 {
+			font-size: 25px;
+			font-weight: normal;
+			padding-bottom: 25px;
+		}
+
+		article {
+			font-size: 15px;
+		}
+
+		#body-container ul {
+			margin: 0 0 10px 17px;
+		}
+
+		#body-container ul li {
+			font-size: 15px;
+			line-height: 20px;
+			list-style: outside none disc;
+		}
+
+		.round-corners {
+			padding: 150px 110px 150px 0px;
+			border: 0px currentColor;
+			border-radius: 0px;
+			background-image: url('/images/shared/bg-legacy.jpg');
+			position: relative;
+			overflow: hidden;
+			background-color: #fff;
+			left: 325px;
+		}
+
+		#body-container {
+			width: 680px !important;
+			font-family: 'Trebuchet MS';
+			margin-top: 15px;
+			float: right;
+			margin-right: -65px;
+			display: inline-block;
+			font-size: 13px;
+			vertical-align: top;
+			width: 925px;
+		}
+
+		article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+			display: block;
+		}
+
+		.right-drop {
+			left: 200px;
+			width: 325px;
+			display: none;
+			z-index: 1100;
+			background-color: #eee;
+			margin-top: 204px;
 		}
 	</style>
 </head>
-<body class="home page page-id-21323 page-template page-template-page-redirect-php">
+<body class=" onehome page page-id-21323 page-template page-template-page-redirect-php">
 <div id="main-content">
-	<div class="wrapper" style="padding-top: 15px;  width: 1080px;">
-		<div class="round-corners"
-		     style="padding: 120px 110px 150px 0px; border: 0px currentColor; color: rgb(255, 255, 255); border-bottom-right-radius: 0px; border-bottom-left-radius: 0px; background-color: rgb(0, 133, 195);">
-			<div class="bg_logo bg">&nbsp;</div>
-
-			<div class="bg_wifi bg">&nbsp;</div>
-
-			<div class="bg_lock bg">&nbsp;</div>
-
-			<div class="bg_cloud bg">&nbsp;</div>
-
-			<div class="bg_scheme bg">&nbsp;</div>
-
+	<div class="wrapper" style="margin-top: 100px;">
+		<div class="round-corners">
+			<div class="bg_quest bg"></div>
 			<div class="menu">
 				<ul aria-activedescendant="ui-id-6" class="ui-menu ui-widget ui-widget-content ui-corner-all" id="menu" role="menu" tabindex="0">
 
 					<li>
-						<a href="http://software.dell.com/remotescan/">Products & Solutions</a>
+						<a href="https://quest.com/remotescan/">Products & Solutions</a>
 					</li>
 					<li>
-						<a href="https://shop.software.dell.com/682/purl-remotescan">Buy</a>
+						<a href="https://shop.quest.com/682/catalog/category.59118/language.en/currency.USD/?id=aiBTgjJcYR">Buy</a>
 					</li>
 					<li class="ui-menu-item" role="presentation">
 						<a aria-haspopup="true" class="ui-corner-all" href="#" id="ui-id-1" role="menuitem" tabindex="-1">Trials</a>
-						<ul aria-expanded="false" aria-hidden="true" class="ui-menu ui-widget ui-widget-content ui-corner-all" role="menu"
-						    style="left: 147px; width: 325px; display: none; z-index: 1100;">
-							<li class="ui-menu-item" role="presentation"><a class="ui-corner-all" href="https://software.dell.com/register/55798" id="ui-id-7" role="menuitem"
+						<ul aria-expanded="false" aria-hidden="true"
+						    class="ui-menu ui-widget ui-widget-content ui-corner-all right-drop" role="menu"
+						>
+							<li class="ui-menu-item" role="presentation"><a class="ui-corner-all"
+							                                                href="https://quest.com/register/55798" id="ui-id-7"
+							                                                role="menuitem"
 							                                                tabindex="-1">RemoteScan Enterprise</a></li>
-							<li class="ui-menu-item" role="presentation"><a class="ui-corner-all" href="https://software.dell.com/register/80740" id="ui-id-8" role="menuitem"
+							<li class="ui-menu-item" role="presentation"><a class="ui-corner-all"
+							                                                href="https://quest.com/register/80740" id="ui-id-8"
+							                                                role="menuitem"
 							                                                tabindex="-1">RemoteScan Enterprise User Edition</a></li>
-							<li class="ui-menu-item" role="presentation"><a class="ui-corner-all" href="https://software.dell.com/register/55799" id="ui-id-9" role="menuitem"
+							<li class="ui-menu-item" role="presentation"><a class="ui-corner-all"
+							                                                href="https://quest.com/register/55799" id="ui-id-9"
+							                                                role="menuitem"
 							                                                tabindex="-1">RemoteScan Universal</a></li>
-							<li class="ui-menu-item" role="presentation"><a class="ui-corner-all" href="https://software.dell.com/register/80741" id="ui-id-10" role="menuitem"
+							<li class="ui-menu-item" role="presentation"><a class="ui-corner-all"
+							                                                href="https://quest.com/register/80741" id="ui-id-10"
+							                                                role="menuitem"
 							                                                tabindex="-1">RemoteScan Universal User Edition</a></li>
 						</ul>
 
 
 					</li>
 					<li>
-						<a href="http://software.dell.com/remotescan/support.aspx">Support</a>
+						<a href="http://quest.com/remotescan/support.aspx">Support</a>
 					</li>
 					<li>
 						<a href="https://www.remote-scan.com/customer/index.php">Customer Login</a>
@@ -507,28 +526,28 @@
 					//$(document).ready(function(){$("#trial_submenu").css('left', '147px');});
 				</script>
 			</div>
-			<div id="body-container" sans-serif=""
-			     style="width: 770px !important; font-family: Museo, &quot;Trebuchet MS&quot;, Helvetica, Arial, sans-serif; margin-top: 10px; float: right;">
-				<h2 style="font-size: 24px; line-height: 30px;">Remote-Scan.com has moved to <a href="http://software.dell.com/remotescan"
-				                                                                                style="color:white;text-decoration: underline">software.dell.com/remotescan</a>
-				</h2>
-
+			<div id="body-container">
+				<h2>Remote-Scan is now Rapid Recovery!</h2>
 				<article>
-					<p style="font-size: 20px; line-height: 30px;">RemoteScan, the software product that enables you to connect document scanners and cameras to hosted applications
-						that are running in Microsoft Hyper-V, Citrix, and VMware servers, has moved to <a style="color:white;text-decoration: underline"
-						                                                                                   href="http://software.dell.com/remotescan">software.dell.com/remotescan</a>
-					</p>
+					<p>RemoteScan, the software product that enables you to connect document scanners and cameras to hosted
+						applications that are running in Microsoft Hyper-V, Citrix, and VMware servers, has moved to <a
+							style="text-decoration: underline" href="http://quest.com/remotescan">software.dell.com/remotescan</a></p>
 					<br>
-					<h4 class="cta" style="font-size: 20px; line-height: 30px;">RemoteScan became a part of Dell Software in 2012 and remains the same scanner connectivity product
-						that organizations have relied on since 2003. Visit us at <a href="http://software.dell.com/remotescan" style="color:white;text-decoration: underline">our new
-							web address</a> and access trial downloads, search our technical documentation, purchase RemoteScan, and learn about our licensing options.</h4>
+					<p class="cta">RemoteScan became a part of Dell Software in 2012 and remains the same scanner connectivity
+						product that organizations have relied on since 2003. Visit us at <a href="http://quest.com/remotescan"
+						                                                                     style="text-decoration: underline">our
+							new web address</a> and access trial downloads, search our technical documentation, purchase RemoteScan,
+						and learn about our licensing options.</p>
 				</article>
 			</div>
 		</div>
-
-		<div class="round-corners" id="footer">&copy;2015 Dell Inc. ALL RIGHTS RESERVED. | <a href="/legal/">Terms of Use</a> | <a href="/legal/privacy.aspx">Privacy</a>
-		</div>
+		<div id="footer">
+			<p>&copy;2016 Quest Software Inc. ALL RIGHTS RESERVED. | <a href="http://quest.com/legal/">Terms
+				of Use</a> | <a href="http://quest.com/legal/privacy.aspx">Privacy</a>
+			</p></div>
 	</div>
+</div>
+</div>
 </div>
 
 <!-- begin olark code -->
